--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -9,11 +9,16 @@
 
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
-
-	<script type="text/javascript" src="/js/latexit.js"></script>
-	<script type="text/javascript">
-	LatexIT.add('p',true);
+	
+	<script>
+	MathJax = {
+	  tex: {
+	    inlineMath: [['$', '$'], ['\\(', '\\)']]
+	  }
+	};
 	</script>
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
   <link rel='stylesheet' type='text/css' href='/css/x3dom.css'>
   <script type='text/javascript' src='/js/x3dom.js'></script>
