--- a/App/templates/dashboard/forum/topic.html
+++ b/App/templates/dashboard/forum/topic.html
@@ -5,7 +5,7 @@
 								<ul class="nav nav-tabs card-header-tabs">
 
 								  <li class="nav-item">
-								    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Thread: {{ thread["question"].title }}</a>
+								    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Thread: {{ thread["question"].title |safe }}</a>
 								  </li>
 								</ul>
 							</div>
@@ -15,7 +15,7 @@
 									<div class="row">
 										<div class="col-sm-10">
 												<i class="fa fa-comment-alt" style="font-size:20px;color:#008cba"></i>
-                        <h5 align="center">{{ thread["question"].title }}</h5>
+                        <h5 align="center">{{ thread["question"].title |safe }}</h5>
 
 										</div>
 										<div class="col-sm-2" align="right">
@@ -26,7 +26,7 @@
 									</div>
                   <div class="row">
                     <p style="text-align: justify; margin: 10px">
-                      {{ thread["question"].body }}
+                      {{ thread["question"].body |safe }}
                     </p>
                   </div>
                   <div class="row">
@@ -39,7 +39,7 @@
                   <div class="row">
 										<div class="col-sm-10">
 												<i class="fa fa-reply-all" style="font-size:20px;color:#008cba"></i>
-                        <a id="" align="center"><small> {{ anwser.title }}</small></a>
+                        <a id="" align="center"><small> {{ anwser.title |safe }}</small></a>
 
 										</div>
 										<div class="col-sm-2" align="right">
@@ -50,7 +50,7 @@
 									</div>
                   <div class="row">
                     <p style="text-align: justify; margin: 10px">
-                      {{ anwser.body }}
+                      {{ anwser.body |safe }}
                     </p><hr>
                   </div>
                   <div class="row">
@@ -73,8 +73,8 @@
             						<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" name="author" required>
             						<div class="invalid-feedback">This field cannot be empty.</div>
                   			<label for="body">Your message</label>
-                  			<textarea class="form-control is-valid form-control-sm" id="body" rows="6" name="body" required></textarea>
-            						<div class="invalid-feedback">This field cannot be empty.</div>
+                  			<textarea class="form-control is-valid form-control-sm" id="body" rows="6" name="body" placeholder="You can use $\LaTeX$ and <html></html> formatting." required></textarea>
+												<small> Inserting image: &ltimg src="URL" class="img-fluid"&gt</small>
                   		</div>
                   		<button type="submit" class="btn btn-primary">Reply</button>
                   	</form>
