--- a/App/templates/world/invite.html
+++ b/App/templates/world/invite.html
@@ -17,17 +17,25 @@
 					<div class="invalid-feedback">This field cannot be empty.</div>
 			</div>
 			<div class="form-row">
-				<div class="form-group col-md-6">
+				<div class="form-group col-md-5">
   					<label>Email address</label>
   					<input type="text" class="form-control is-valid form-control-sm" id="email" name="email" placeholder="Enter email address"  required>
   					<div class="invalid-feedback">This field cannot be empty.</div>
 				</div>
-  			<div class="form-group col-md-6">
+  			<div class="form-group col-md-5">
   				<label>Affiliation</label>
 						<select class="custom-select is-invalid" id="affil" name="affil" required>
               {% for place in afil %}
 							<option value="{{ place.id }}">{{ place.head }}</option>
               {% endfor %}
+						</select>
+  			</div>
+  			<div class="form-group col-md-2">
+  				<label>function</label>
+						<select class="custom-select is-invalid" id="function" name="function" required>
+							<option value="sta">Staff</option>
+							<option value="phd">PhD Student</option>
+							<option value="stu">Student</option>
 						</select>
   			</div>
 			</div>
@@ -81,9 +89,7 @@
     			</div>
        </div>
      </div>
-<hr>
+		 <hr>
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Join</button>
 		</form>
-	</div>
-
 {% endblock %}
