--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -143,7 +143,7 @@
 	</ul>
 	<ul class="nav navbar-nav navbar-center">
 		<li class="nav-item">
-			<a class="nav-link" href="{{ lang["repo"] }}"><i class="fa fa-github"></i> GitHub<font color="gray">©2020 BINA@CCB</font></a>
+			<a class="nav-link" href="{{ lang["repo"] }}"><i class="fab fa-github"></i> GitHub<font color="gray">©2020 BINA@CCB</font></a>
 		</li>
 	</ul>
 	<ul class="nav navbar-nav navbar-center">
