--- a/App/templates/dashboard/forum/index.html
+++ b/App/templates/dashboard/forum/index.html
@@ -13,7 +13,7 @@
 						<span class="d-none d-md-inline" style="color:#4f4f4f;"><hr><small>{{ category }}</small> </span>
 					</a>
 					{% for topic in forum[category].keys() %}
-		      <a class="nav-link" id="vt{{forum[category][topic]["id"]}}" data-toggle="pill" href="#v{{ forum[category][topic]["id"] }}" role="tab" aria-controls="v{{ forum[category][topic]["id"] }}" aria-selected="true">{{ topic }}</a>
+		      <a class="nav-link" id="vt{{forum[category][topic]["id"]}}" data-toggle="pill" href="#v{{ forum[category][topic]["id"] }}" role="tab" aria-controls="v{{ forum[category][topic]["id"] }}" aria-selected="true"><span class="badge badge-pill badge-secondary" align="right">{{ forum[category][topic]["n_topics"] }}</span> {{ topic }}</a>
 					{% endfor %}
 					{% endfor %}
 		    </div>
@@ -44,7 +44,7 @@
 										<div class="col-sm-10">
 											<a class="nav-link active text-dark " href="/dashboard/forum/{{ thread["question"].id }}">
 												<i class="fa fa-comment-alt" style="font-size:30px;color:#008cba"></i>
-												<b>{{ thread["question"].title }}<br><small>Author: {{ thread["question"].author }}</small></b>
+												<span class="badge badge-pill badge-secondary" align="right">{{ thread["n_anwsers"] }}</span> <b>{{ thread["question"].title }}<br><small>Author: {{ thread["question"].author }}</small></b>
 											</a>
 											<hr>
 										</div>
