--- a/App/templates/dashboard/files/presentations.html
+++ b/App/templates/dashboard/files/presentations.html
@@ -52,7 +52,7 @@
 								</div>
 								<div class="col" align="right">
 										<a  type="button" href="/dashboard/edit/presentation/{{content.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:#008cba"></i></a>
-										<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ content.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
+							<!--			<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ content.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
 
 										<div class="modal fade" id="delete{{ content.id }}" tabindex="-1" role="dialog" aria-hidden="true">
 											<div class="modal-dialog modal-dialog-centered" role="document">
@@ -69,7 +69,7 @@
 												</div>
 											</div>
 										</div>
-
+							-->
 
 								</div>
 							</div>
