Added: report to delete button

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -33,7 +33,7 @@
 					<ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 
 						<li class="nav-item">
-							<a class="nav-link pl-0 text-nowrap" href="{{ lang["domain"] }}"><h5><i class="fa fa-backward"></i> <span class="font-weight-bold">Back</h5></span></a>
+							<a class="nav-link pl-0 text-nowrap" href="{{ state["domain"] }}"><h5><i class="fa fa-backward"></i> <span class="font-weight-bold">Back</h5></span></a>
 						</li>
 
 						<li class="nav-item">
