--- a/App/templates/dashboard/files/papers.html
+++ b/App/templates/dashboard/files/papers.html
@@ -37,7 +37,7 @@
 				<td>{{pub.year|int}}</td>
 				<td>
 					<a  type="button" href="/dashboard/edit/paper/{{pub.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:#008cba"></i></a>
-				<!--	<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ pub.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
+					<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ pub.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
 
 					<div class="modal fade" id="delete{{ pub.id }}" tabindex="-1" role="dialog" aria-hidden="true">
 						<div class="modal-dialog modal-dialog-centered" role="document">
@@ -48,13 +48,16 @@
 											<span aria-hidden="true">&times;</span>
 										</button>
 								</div>
+
+
 								<div class="modal-body">
-									<a  type="button" href="/dashboard/delete/paper/{{pub.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i>Delete</a>
+									<br>The file will be deleted after admin confirmation.
+									<a  type="button" href="/dashboard/delete/paper/{{pub.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i> Report</a>
 								</div>
 							</div>
 						</div>
 					</div>
-				-->
+
 
 				</td>
 			</tr>
