--- a/App/templates/dashboard/files/papers.html
+++ b/App/templates/dashboard/files/papers.html
@@ -36,6 +36,7 @@
 				<td><b><a  href="/dashboard/{{section}}/download/{{pub.id}}">{{pub.title}}</a></b><br><small>{{pub.reference}}</small></td>
 				<td>{{pub.year|int}}</td>
 				<td>
+					<button type="button" class="btn btn-outline-success btn-sm" data-toggle="modal" data-target="#share{{ pub.id }}"><i class="fa fa-share-alt" style="font-size:15px;color:#32a83e"></i> Share</button>
 					<a  type="button" href="/dashboard/edit/paper/{{pub.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:#008cba"></i></a>
 					<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ pub.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
 
@@ -48,11 +49,26 @@
 											<span aria-hidden="true">&times;</span>
 										</button>
 								</div>
-
-
 								<div class="modal-body">
 									<br>The file will be deleted after admin confirmation.
 									<a  type="button" href="/dashboard/delete/paper/{{pub.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i> Report</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="modal fade" id="share{{ pub.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+						<div class="modal-dialog modal-dialog-centered" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalCenterTitle">Are you sure?</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+								</div>
+								<div class="modal-body">
+									<br>The file will be visable without login.
+									<a  type="button" href="/dashboard/share/papers/{{pub.id}}" class="btn btn-outline-success btn-sm"><i class="fa fa-share-alt" style="font-size:15px;color:green"></i> Generate link</a>
 								</div>
 							</div>
 						</div>
