Updated: share&delete prompt

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -75,7 +75,7 @@
 							<a class="nav-link pl-0" href="/dashboard/events"><i class="fa fa-calendar-alt"></i> <span class="d-none d-md-inline">Events</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/git"><i class="fa fa-microchip"></i> <span class="d-none d-md-inline">Software</span></a>
+							<a class="nav-link pl-0 disabled" href="/dashboard/git"><i class="fa fa-microchip"></i> <span class="d-none d-md-inline">Software</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/forum"><i class="fa fa-comments"></i> <span class="d-none d-md-inline">Forum</span></a>
