Updated: config-> created default.py; optional user.py

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -62,6 +62,9 @@
 								<li class="nav-item">
 									<a class="dropdown-item" href="/dashboard/database"><i class="fa fa-database"></i> <span class="d-md-inline">Database</span></a>
 								</li>
+								<li class="nav-item">
+									<a class="dropdown-item" href="{{ state["local-dev"] }}"><i class="fa fa-radiation"></i> <span class="d-md-inline">dev-server</span></a>
+								</li>
 							</div>
 						</div>
 
