Updated: home margin(publications/ lang switch)

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -64,10 +64,10 @@
 			<ul class="navbar-nav flex-row ml-md-auto  d-md-flex">
 
 				<li class="nav-item">
-					<a class="nav-link active" href="{{ lang["domain"] }}/en/experiments.html">EN/</a>
+					<a style="margin-right:6px" class="nav-link active" href="{{ lang["domain"] }}/en/experiments.html">EN</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" href="{{ lang["domain"] }}/pl/experiments.html">PL</a>
+					<a style="margin-right:6px" class="nav-link active" href="{{ lang["domain"] }}/pl/experiments.html">PL</a>
 				</li>
 
 				<li class="nav-item">
