--- a/App/templates/world/home.html
+++ b/App/templates/world/home.html
@@ -5,7 +5,7 @@
 		<div class="row">
 		<div class=" blog-main">
 			<h2 class="font-italic border-bottom">
-				{{lang["ihstud"]}} <a  type="button" href="{{lang["domain"]}}/rss.xml"><i class="fa fa-rss-square" style="font-size:25px;color:orange"></i></a>
+				<a  type="button" href="{{lang["domain"]}}/rss.xml"><i class="fa fa-rss-square" style="font-size:30px;color:orange"></i></a> {{lang["ihstud"]}} 
 			</h2>
 
       <br>
