--- a/App/templates/world/invite.html
+++ b/App/templates/world/invite.html
@@ -62,7 +62,7 @@
        Social links
        </a>
        <a class="btn btn-primary btn-sm" data-toggle="collapse" href="#npass" role="button" aria-expanded="false" aria-controls="spacestar">
-       Personal password
+       Personal password (disabled)
        </a>
      <div class="collapse multi-collapse" id="social">
        <div class="card card-body">
@@ -84,7 +84,7 @@
        <div class="card card-body">
     			<div class="form-group">
     				<label>Personal Password. </label>
-						Set up password to manage your own information.
+						<b>Feature disabled</b> -&gt /dev/null <br><s>Set up password to manage your own information.</s>
     				<input type="password" class="form-control is-valid form-control-sm" id="npassword" placeholder="Your personal password" name="npassword">
     			</div>
        </div>
