--- a/App/templates/world/publications.html
+++ b/App/templates/world/publications.html
@@ -12,7 +12,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					{% for pub in publications %}
+					{% for pub in publications[0] %}
 					<tr>
 						<td align="left">
 							<b style="margin-left:13px">{{pub.title}}</b>
