Added: recording section

--- a/App/templates/dashboard/files/gallery.html
+++ b/App/templates/dashboard/files/gallery.html
@@ -3,7 +3,7 @@
 <div align=left>
 
 			<div class="btn-group" role="group" aria-label="First group">
-				<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modnew">Add photos</button>
+				<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modnew">Add files</button>
 			</div><hr>
 
 {% for type in types %}
@@ -24,7 +24,7 @@
 	<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">New Photos</h5>
+				<h5 class="modal-title" id="exampleModalLabel">New Files</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
