--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -5,7 +5,7 @@
 	<div class="card-header">
 		<ul class="nav nav-tabs card-header-tabs">
 			<li class="nav-item">
-				<a class="nav-link" href="/dashboard/gallery">Gallery</a>
+				<a class="nav-link" href="/dashboard/gallery">Media</a>
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Papers</a>
