Updated: software; added gitlab beta link

--- a/App/templates/dashboard/git/index.html
+++ b/App/templates/dashboard/git/index.html
@@ -1,76 +1,5 @@
 {% extends "dashboard.html" %}
 {% block dashboard %}
 
-<div class="container-fluid">
-	<div align=left>
-
-		<div class="row">
-		  <div class="col-3">
-		    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-					<a href="/dashboard/git/" type="button" class="btn btn-outline-success">New Program</a>
-					<a class="nav-link pl-0 disabled" href="/dashboard/notes">
-						<span class="d-none d-md-inline" style="color:#4f4f4f;"><hr><small>Repository</small> </span>
-					</a>
-					{% for repo in repos %}
-		      <a class="nav-link" id="vt{{repo["repo"].id}}" data-toggle="pill" href="#v{{repo["repo"].id }}" role="tab" aria-controls="v{{ repo["repo"].id }}" aria-selected="true">
-            <b>{{ repo["repo"].title }}</b>
-          </a>
-					{% endfor %}
-		    </div>
-			</div>
-		  <div class="col-9">
-		    <div class="tab-content" id="v-pills-tabContent">
-		      <div class="tab-pane fade show active" id="vv" role="tabpanel" aria-labelledby="vtv">
-							{% block dashboard_git %}{% endblock %}
-					</div>
-					{% for repo in repos %}
-		      <div class="tab-pane fade show " id="v{{ repo["repo"].id }}" role="tabpanel" aria-labelledby="vt{{ repo["repo"].id }}">
-
-						<div class="card text-center">
-							<div class="card-header">
-								<ul class="nav nav-tabs card-header-tabs">
-
-								  <li class="nav-item">
-								    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">{{ repo["repo"].title }}: Branches</a>
-								  </li>
-								</ul>
-							</div>
-							<div class="card-body">
-								<div align=left>
-                  <div class="accordion" id="accordionExample">
-                  	{% for branch in repo["branches"] %}
-                  	<div class="card">
-                  		<div class="card-header" id="heading{{repo['repo'].id}}{{branch["id"]}}" align="left">
-                  			<h5 class="mb-0">
-  												<i class="fa fa-code-branch" style="font-size:30px;color:#008cba"></i>
-                  				<button class="btn btn-outline-dark collapsed" type="button" data-toggle="collapse" data-target="#collapse{{repo['repo'].id}}{{branch["id"]}}" aria-expanded="false" aria-controls="collapse{{repo['repo'].id}}{{branch["id"]}}">
-                            {{ branch["name"] }}
-                  				</button>
-                  			</h5>
-                  		</div>
-                  		<div id="collapse{{repo['repo'].id}}{{branch["id"]}}" class="collapse" aria-labelledby="heading{{repo['repo'].id}}{{branch["id"]}}" data-parent="#accordionExample">
-                  			<div class="card-body">
-                  				<div align=left>
-                            {% for commit in branch["commits"] %}
-  										      <a href="/dashboard/git/{{ commit.id }}"><i class="fa fa-code" style="font-size:20px;color:#008cba"></i>{{ commit.title }}</a><hr>
-                            {% endfor %}
-                  				</div>
-                  			</div>
-                  		</div>
-                  	</div>
-                  	{% endfor %}
-                  </div>
-								</div>
-							</div>
-
-						</div>
-
-					</div>
-					{% endfor %}
-		    </div>
-		  </div>
-		</div>
-
-	</div>
-</div>
+<iframe src="http://155.158.122.235:8088" title="Fenu-Experiment GIT repository" style="border:none; width:100%; height:100%;position:absolute;padding-right:2%" >
 {% endblock %}
