--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -78,7 +78,7 @@
 							<a class="nav-link pl-0" href="/dashboard/events"><i class="fa fa-calendar-alt"></i> <span class="d-none d-md-inline">Events</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link pl-0 disabled" href="/dashboard/git"><i class="fa fa-microchip"></i> <span class="d-none d-md-inline">Software</span></a>
+							<a class="nav-link pl-0" href="/dashboard/gitlab"><i class="fa fa-microchip"></i> <span class="d-none d-md-inline">GitLab</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/forum"><i class="fa fa-comments"></i> <span class="d-none d-md-inline">Forum</span></a>
@@ -95,14 +95,14 @@
 			{% endfor %}
 		{% endif %}
 	{% endwith %}
-
+<!--
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/dashboard/forum">{{ session["nav_p"] }}</a></li>
     <li class="breadcrumb-item active" aria-current="page">{{ session["nav_c"] }}</li>
   </ol>
 </nav>
-
+-->
 {% block dashboard %}{% endblock %}
         </main>
     </div>
