--- a/App/templates/dashboard/git/index.html
+++ b/App/templates/dashboard/git/index.html
@@ -1,5 +1,5 @@
 {% extends "dashboard.html" %}
 {% block dashboard %}
 
-<iframe src="http://155.158.122.235:8088" title="Fenu-Experiment GIT repository" style="border:none; width:100%; height:100%;position:absolute;padding-right:2%" >
+<iframe src="https://gitlab.fenu-experiment.pl" title="Fenu-Experiment GIT repository" style="border:none; width:100%; height:100%;position:absolute;padding-right:2%" >
 {% endblock %}
